--- a/src/styles/Evaluations.css
+++ b/src/styles/Evaluations.css
@@ -1,6 +1,6 @@
 .evaluations-container {
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   padding: 2rem;
   background-color: #f8f9fa;
   display: flex;
@@ -399,4 +399,4 @@
   .register-button {
     width: 100%;
   }
-} 
+}
