--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,5 @@
+@import './responsive.css';
+
 body {
   margin: 0;
   padding: 0;
@@ -77,4 +79,4 @@ body {
   .main-content {
     padding: 1rem;
   }
-} 
+}
